-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.1
-
None
-
3
-
8656
This issue was created by maloo for Andreas Dilger <andreas.dilger@intel.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/f96a0ba0-d2f2-11e2-a349-52540035b04c.
The sub-test test_51 failed with the following error in the MDS log:
lqe_iter_cb(): Inuse quota entry
Info required for matching: recovery-small 51