LU-3460 quota: don't schedule adjust when qsd stopped

When the qsd is stopped, we should not schedule quota adjust or
index update anymore, because the writeback thread has been stopped,
and those scheduled requests will never be processed.

Lustre-commit: 76ddf87488010a38a3e7b0b5923e0fe8e725326a
Lustre-change: http://review.whamcloud.com/6731

Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Reviewed-by: Johann Lombardi <johann.lombardi@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Change-Id: I7c10c79db4176b3af8c7741dd438a2095ddb9bb5
Reviewed-on: http://review.whamcloud.com/8169
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>